Updated the About data section

--- a/Bank data analysis.ipynb
+++ b/Bank data analysis.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Bank Transaction Data\n",
+    "Code to start analysis one this or similar dataset.\n",
+    "\n",
+    "•\tWhat are the accounts that are being flagged for suspicious activity?\n",
+    "\n",
+    "•\tCan the account holders of the accounts be cross referenced with other financial institutions, for similar suspicious behaviour?\n",
+    "\n",
+    "•\tHow can this be securely communicated (database to database)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cc3b8ca6",
    "metadata": {},
    "outputs": [
@@ -75,30 +90,6 @@
     "\n",
     "print(filtered_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d92223c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffd9ef66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70b4c692",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
