About sectione updated

--- a/Bank data analysis.ipynb
+++ b/Bank data analysis.ipynb
@@ -5,14 +5,35 @@
    "metadata": {},
    "source": [
     "\n",
-    "Bank Transaction Data\n",
-    "Code to start analysis one this or similar dataset.\n",
+    "**Bank Transaction Data**\n",
+    "Code to start analysis on this or similar dataset.\n",
     "\n",
     "•\tWhat are the accounts that are being flagged for suspicious activity?\n",
     "\n",
     "•\tCan the account holders of the accounts be cross referenced with other financial institutions, for similar suspicious behaviour?\n",
     "\n",
-    "•\tHow can this be securely communicated (database to database)\n"
+    "•\tHow can this be securely communicated (database to database)\n",
+    "\n",
+    "About this Dataset:Extracted bank account statements of various bank accounts\n",
+    "\n",
+    "**Column in this dataset**\n",
+    "\n",
+    "**Account No** - This represents the account number involved in transaction.\n",
+    "\n",
+    "**Date** - Date of transaction\n",
+    "\n",
+    "**Transaction Details** - Transaction narrations in bank statements\n",
+    "\n",
+    "**Cheque No** - This indicates the cheque number\n",
+    "\n",
+    "**Value Date** - Date of completion of transaction\n",
+    "\n",
+    "**Withdrawal Amount** - Indicates the amount withdrawn\n",
+    "\n",
+    "**Deposit Amount** - Indicates the amount deposited\n",
+    "\n",
+    "**Balance Amount** - Current balance of account\n",
+    "\n"
    ]
   },
   {
