--- a/Sources_of_financial_crime.ipynb
+++ b/Sources_of_financial_crime.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "**Datasets:**\n",
         "\n",
-        "We have collected four financial dataset from Kaggle which consist of three synthetic datasets, one real anonymised and create our own synthetic financial data.\n",
+        "We have collected four financial dataset from Kaggle which consist of three synthetic datasets, one real anonymised dataset and create our own synthetic financial data.\n",
         "\n",
         "**1. Synthetc Financial Dataset**\n",
         "\n",
