--- a/coded-code.ipynb
+++ b/coded-code.ipynb
@@ -7,10 +7,16 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pydp import LaplaceMechanism\n",
+    "import numpy as np\n",
+    "import random\n",
     "\n",
-    "sigma = 1.0  \n",
-    "sensitivity = 1  \n",
+    "def add_noise(data, sigma):\n",
+    "    noise = np.random.laplace(scale=sigma)\n",
+    "    return data + noise\n",
+    "\n",
+    "def compute_epsilon(sigma, delta):\n",
+    "    epsilon = -(np.log(delta) / (2 * sigma**2))\n",
+    "    return epsilon\n",
     "\n",
     "customer_names = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Emily\", \"Frank\", \"Grace\", \"Harry\", \"Isabella\", \"Jack\"]\n",
     "account_numbers = [random.randint(10000000, 99999999) for _ in range(len(customer_names))]\n",
@@ -24,12 +30,16 @@
     "    \"Deposit Amount\": deposit_amounts\n",
     "})\n",
     "\n",
+    "sigma = 1.0  \n",
+    "sensitivity = 1  \n",
     "\n",
-    "laplace_mechanism = LaplaceMechanism(l=sigma, sensitivity=sensitivity)\n",
-    "synthetic_data[\"Deposit Amount\"] = laplace_mechanism.add_noise(synthetic_data[\"Deposit Amount\"])\n",
+    "synthetic_data[\"Deposit Amount\"] = add_noise(synthetic_data[\"Deposit Amount\"], sigma)\n",
     "\n",
+    "epsilon = compute_epsilon(sigma, 0.01)\n",
     "\n",
-    "synthetic_data.to_csv('coded.csv', index=False)\n"
+    "print(\"Epsilon:\", epsilon)\n",
+    "\n",
+    "synthetic_data.to_csv('coded.csv', index=False)"
    ]
   }
  ],
