--- a/coded-code.ipynb
+++ b/coded-code.ipynb
@@ -11,7 +11,7 @@
     "import random\n",
     "\n",
     "def add_noise(data, sigma):\n",
-    "    noise = np.random.laplace(scale=sigma)\n",
+    "    noise = np.random.laplace(scale=sigma, size=len(data))\n",
     "    return data + noise\n",
     "\n",
     "def compute_epsilon(sigma, delta):\n",
@@ -39,7 +39,8 @@
     "\n",
     "print(\"Epsilon:\", epsilon)\n",
     "\n",
-    "synthetic_data.to_csv('coded.csv', index=False)"
+    "synthetic_data.to_csv('coded.csv', index=False)\n",
+    "\n"
    ]
   }
  ],
